--- a/index.html
+++ b/index.html
@@ -59,8 +59,119 @@
           <img class="logo-client" src="./assets/img/client-7.png" alt="" />
         </div>
       </section>
+      <div class="gap"></div>
+      <section class="community-container">
+        <div class="community-title">
+          <h2>Manage your entire community in a single system</h2>
+          <p>Who is Nextcent suitable for?</p>
+        </div>
+        <div class="community-list-items">
+          <div class="item">
+            <img src="./assets/img/community-1.png" alt="" class="logo-item" />
+            <h3 class="title-item">Membership Organisations</h3>
+            <p class="desc-item">
+              Our membership management software provides full automation of
+              membership renewals and payments
+            </p>
+          </div>
+          <div class="item">
+            <img src="./assets/img/community-2.png" alt="" class="logo-item" />
+            <h3 class="title-item">National Associations</h3>
+            <p class="desc-item">
+              Our membership management software provides full automation of
+              membership renewals and payments
+            </p>
+          </div>
+          <div class="item">
+            <img src="./assets/img/community-3.png" alt="" class="logo-item" />
+            <h3 class="title-item">Clubs And Groups</h3>
+            <p class="desc-item">
+              Our membership management software provides full automation of
+              membership renewals and payments
+            </p>
+          </div>
+        </div>
+      </section>
+      <div class="gap"></div>
+      <section class="article-container">
+        <aside class="img-article">
+          <img src="./assets/img/Illustration-2.png" alt="" />
+        </aside>
+        <article class="content-article">
+          <h2>The unseen of spending three years at Pixelgrade</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit
+            amet justo ipsum. Sed accumsan quam vitae est varius fringilla.
+            Pellentesque placerat vestibulum lorem sed porta. Nullam mattis
+            tristique iaculis. Nullam pulvinar sit amet risus pretium auctor.
+            Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. Donec
+            elementum pulvinar odio.
+          </p>
+          <button class="btn-article">Learn More</button>
+        </article>
+      </section>
+      <div class="gap"></div>
+      <section class="stats-container">
+        <div class="stats-info">
+          <h2>Helping a local <span>business reinvent itself</span></h2>
+          <p>We reached here with our hard work and dedication</p>
+        </div>
+        <div class="list-items-stats">
+          <div class="item-stats">
+            <img src="./assets/img/Icon-1.png" alt="" />
+            <div class="count-stats">
+              <h3>2,245,341</h3>
+              <p>Member</p>
+            </div>
+          </div>
+          <div class="item-stats">
+            <img src="./assets/img/Icon-2.png" alt="" />
+            <div class="count-stats">
+              <h3>46,328</h3>
+              <p>Clubs</p>
+            </div>
+          </div>
+          <div class="item-stats">
+            <img src="./assets/img/Icon-3.png" alt="" />
+            <div class="count-stats">
+              <h3>828,867</h3>
+              <p>Event Bookings</p>
+            </div>
+          </div>
+          <div class="item-stats">
+            <img src="./assets/img/Icon-4.png" alt="" />
+            <div class="count-stats">
+              <h3>1,926,436</h3>
+              <p>Payments</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="gap"></div>
+      <section class="article-container">
+        <aside class="img-article">
+          <img src="./assets/img/Illustration-3.png" alt="" />
+        </aside>
+        <article class="content-article">
+          <h2>How to design your site footer like we did</h2>
+          <p>
+            Donec a eros justo. Fusce egestas tristique ultrices. Nam tempor,
+            augue nec tincidunt molestie, massa nunc varius arcu, at scelerisque
+            elit erat a magna. Donec quis erat at libero ultrices mollis. In hac
+            habitasse platea dictumst. Vivamus vehicula leo dui, at porta nisi
+            facilisis finibus. In euismod augue vitae nisi ultricies, non
+            aliquet urna tincidunt. Integer in nisi eget nulla commodo faucibus
+            efficitur quis massa. Praesent felis est, finibus et nisi ac,
+            hendrerit venenatis libero. Donec consectetur faucibus ipsum id
+            gravida.
+          </p>
+          <button class="btn-article">Learn More</button>
+        </article>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <p>&copy; Copyright Nexcent : Furqon Wahyudi</p>
+    </footer>
     <script src="./script.js"></script>
   </body>
 </html>
